fix: stretched images fixed

--- a/src/styles/PageStyles.scss
+++ b/src/styles/PageStyles.scss
@@ -210,9 +210,9 @@
       flex-direction: row;
     }
 
-    @media (max-width: 433px) {
+    @media (max-width: 480px) {
       margin: 0px 20px;
-      padding: 50px 10px;
+      padding: 50px 30px;
       width: 400px;
       transition: 850ms;
     }
@@ -317,9 +317,10 @@
             padding: 3px 15px;
           }
 
-          @media (max-width: 433px) {
-            font-size: 12px;
+          @media (max-width: 480px) {
+            font-size: 14px;
             padding: 10px;
+            width: 120px;
           }
         }
 
@@ -414,10 +415,16 @@
       flex-direction: column;
       align-items: center;
       gap: 24px;
-      width: 500px;
+      width: 380px;
 
-      @media (max-width: 420px) {
-        height: 300px;
+      img{
+        @media (max-width: 480px) {
+          height: 250px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        height: 250px;
       }
     }
 
@@ -967,9 +974,9 @@
           height: 500px;
         }
 
-        @media (max-width: 400px) {
+        @media (max-width: 480px) {
           width: 250px;
-          height: 400px;
+          height: 300px;
         }
       }
 
